# TOSCheck

./: .env  README.md  explain_report.json  explain_report.md  main.py  pyproject.toml  report.json  report.md  report2.json  report2.md  requirements.txt  sample.txt  sample2.txt  scan_report.json  scan_report.md  seeds.yml
.ragcache/: chunks.json  embeddings.npy
kb_rag/: chunks.json  embeddings.npy
rag_patterns/: arbitration.txt  content_rights.txt  data_collection.txt  refund_policies.txt  surveillance.txt  unilateral_changes.txt
sample_tos_example(s)/: sample_tos_1.txt
tos_rag/: chunks.json  embeddings.npy
toscheck/: analyzer.py  app.py  cache.py  chunk.py  cli.py  explain.py  extract.py  filters.py  index.py  llm.py  llm_safe.py  longscan.py  main.py  merge.py  patterns.py  rag.py  report.py  retrieve.py  scoring.py  utils.py  validate.py
